--- a/package.json
+++ b/package.json
@@ -21,5 +21,12 @@
   "homepage": "https://github.com/tyler-bartschi/startup#readme",
   "devDependencies": {
     "vite": "^6.1.0"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.3",
+    "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5"
   }
 }
