--- a/service/package.json
+++ b/service/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
     "mongodb": "^6.14.2",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "ws": "^8.18.1"
   }
 }
